<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
      android:id="@+id/homeFragment"
      android:title="@string/home"
      android:icon="@drawable/baseline_home_white_24dp"/>

    <item
        android:id="@+id/categoryFragment"
        android:title="@string/category"
        android:icon="@drawable/baseline_category_black_24dp"/>
    <item
      android:id="@+id/trendingFragment"
      android:title="@string/trending"
      android:icon="@drawable/baseline_assessment_black_24dp"/>

    <item
        android:id="@+id/accountFragment"
        android:title="@string/account"
        android:icon="@drawable/baseline_account_box_black_24dp"/>

</menu>
