<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/keyline_4"
            android:text="More"
            android:textColor="@color/blu_gray_900"
            android:textSize="24sp"
            android:textStyle="bold"

            />

        <LinearLayout
            android:id="@+id/btn_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_2"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:src="@drawable/baseline_history_black_24dp"
                    app:tint="@color/purple_700" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/history"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_note"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_sleep_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_2"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:src="@drawable/baseline_alarm_white_24dp"
                    app:tint="@color/purple_700" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="Hẹn giờ"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep_note"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_feet_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_2"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:src="@drawable/baseline_feedback_white_24dp"
                    app:tint="@color/purple_700" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/feedback"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_note"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_2"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:src="@drawable/baseline_rate_review_black_24dp"
                    app:tint="@color/purple_700" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/rate"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_note"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_2"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:src="@drawable/baseline_policy_white_24dp"
                    app:tint="@color/purple_700" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/privacy"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_note"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>


</layout>