<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/keyline_4"
        android:layout_margin="@dimen/keyline_2"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:id="@+id/iv_item"
                />
            <TextView
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginEnd="@dimen/keyline_4"
                android:layout_marginTop="@dimen/keyline_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audiobook"
                android:textAllCaps="true"

                />
            <TextView
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginEnd="@dimen/keyline_4"
                android:layout_marginTop="@dimen/keyline_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title"
                android:textColor="@color/blu_gray_900"
                android:text="@string/home"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:maxLines="3"
                android:id="@+id/tv_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginEnd="@dimen/keyline_4"
                android:layout_marginTop="@dimen/keyline_2"
                android:layout_marginBottom="@dimen/keyline_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_cate"
                android:textColor="@color/blu_gray_600"
                android:textSize="14sp"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>
